# ers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: app.rs  main.rs  models.rs  ui.rs  widgets.rs
src/models/: book.rs  epub.rs  image.rs  page.rs  reading_position.rs
src/widgets/: custom_thread_image.rs
