[package]
name = "epub-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
epub = "1.2.2"
image = "0.25.5"
path-clean = "1.0.1"
ratatui = {version = "0.29.0",features = ["unstable-rendered-line-info"]}
ratatui-image = "3.0.0"
regex = "1.11.1"
roxmltree = "0.20.0"
tui-scrollview = "0.5.0"
