[package]
name = "ers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
dirs = "5.0"
image = "0.25.5"
md5 = "0.7.0"
path-clean = "1.0.1"
ratatui = {version = "0.29.0",features = ["unstable-rendered-line-info"]}
ratatui-image = "3.0.0"
regex = "1.11.1"
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2.0"
